Se agrego una nueva opcion para sumar un tercer numero

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suma de 2 números. </title>
+    <title>Suma de 3 números. </title>
 </head>
 <body>
     <!---Si se ha enviado el formulario--> 
     <form action="operacion.php" method="POST" >
         Número 1: <input type="number" name="num1" required>
         Número 2: <input type="number" name="num2" required>
+        Número 3: <input type="number" name="num2" required>
         <input type="submit" value="Sumar">
     </form>
 </body>
